update: initialization of the project

--- a/notebooks/llm_startingpoint.ipynb
+++ b/notebooks/llm_startingpoint.ipynb
@@ -18,7 +18,7 @@
     "# limit gpu usage to one gpu\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
     "\n",
-    "from transformers import AutoModelForCausalLM\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
     "# Alternatively, use LLAMA 3.2 1B Instruct\n",
     "model_name = \"Qwen/Qwen2.5-0.5B-Instruct\"\n",
@@ -63,6 +63,39 @@
     "    # ENDTODO\n",
     "\n",
     "print(test_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loss function of Transformers, starting point, Nov 27\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained()\n",
+    "# input = [n, d] X\n",
+    "# output = [k, d] Y\n",
+    "\n",
+    "Y = torch.randn(k, d)\n",
+    "for number_of_optimization in range(100):\n",
+    "    # forward pass\n",
+    "    X = input_x\n",
+    "    model_input = torch.cat([X, Y], dim=0) #[X, Y]\n",
+    "    output = model(model_input) # in [n+k, d]\n",
+    "    new_Y = output[-k:] # [k, d]\n",
+    "\n",
+    "    loss = inertia_loss(X, new_Y)\n",
+    "    Y = new_Y\n",
+    "\n",
+    "    # backward pass\n",
+    "    loss.backward()\n",
+    "\n",
+    "    # optimization\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    # print loss\n",
+    "    print(loss)\n"
    ]
   }
  ],
